theme/nice/style/style.css
/* ... */
.nice-navbar-container .dropdown-menu.show .dropdown-item:last-child {
    border-bottom: none;
}

.nice-navbar-container .dropdown-menu.show .dropdown-item:first-child {
    border-top-left-radius: var(--nice-border-radius);
    border-top-right-radius: var(--nice-border-radius);
}

.nice-navbar-container .dropdown-menu.show .dropdown-item:last-child {
    border-bottom-left-radius: var(--nice-border-radius);
    border-bottom-right-radius: var(--nice-border-radius);
}

#carousel-item-main .dropdown-divider {
    display: none;
}

@media (min-width: 992px) {
    .navbar-expand-lg .navbar-nav .nav-link {
        padding-right: 0.7rem;
        padding-left: 0.7rem;
    }
}

@media (max-width: 992px) {
    .nice-navbar-container .navbar-collapse.collapsing .navbar-nav {
        display: block;
        position: fixed;
        top: 0;
        bottom: 0;
        left: -45%;
        right: 0;
        transition: all 0.2s ease;
    }

    .nice-navbar-container .navbar-collapse.show .navbar-nav {
        position: fixed;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        flex-direction: column;
        height: auto;
        width: 60%;
        transition: left 0.35s ease;
        -webkit-box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
        -moz-box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
        box-shadow: 0 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
        background: var(--nice-color-white);
        padding: 20px;
        z-index: 9999;
    }
}

.navbar-toggler {
    height: 35px;
    width: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--nice-color-secondary);
    color: var(--nice-color-white);
    border-radius: var(--nice-border-radius);
}

.navbar-toggler:hover {
    opacity: 0.9;
}

.upper-bar {
    padding-top: 10px;
    justify-content: end;
}

.upper-bar #usernavigation {
    justify-content: end;
}

.nice-settings {
    width: 35px;
    height: 35px;
    background: #e9ecef;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
}

#usernavigation {
    gap: 10px;
}

#usernavigation-desktop {
    gap: 10px;
}

#usernavigation-mobile {
    gap: 10px;
}

.upper-bar #usernavigation-mobile {
    justify-content: end;
}

#usernavigation-desktop .btn {
    padding: 0 !important;
}

#usernavigation .btn {
    padding: 0 !important;
}

#nav-notification-popover-container {
    width: 35px;
    height: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #e9ecef;
    border-radius: 50%;
}

[data-region="popover-region-messages"] a {
    width: 35px;
    height: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #e9ecef;
    border-radius: 50%;
}

.nice-search-container a {
    width: 35px;
    height: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #e9ecef;
    border-radius: 50%;
}

.nice-search-container a:focus {
    background: #e9ecef;
}

.simplesearchform .collapse.show,
.simplesearchform .collapsing {
    height: 100% !important;
}

.carousel-navigation-link {
    display: none;
}

.editmode-switch-form label {
    margin-top: 1px;
    font-size: 16px;
}

.userinitials {
    margin: 0;
}

@media (max-width: 767px) {
    .popover-region-container {
        right: auto;
        top: 35px;
        width: 250px;
    }
}

.navbar .popover-region-container {
    top: 35px !important;
    z-index: 999999;
}

.popover-region-header-container {
    height: 45px !important;
    line-height: 30px !important;
    padding: 10px !important;
}

[data-region="right-hand-drawer"].drawer {
    top: 0;
    bottom: 0;
    height: 100% !important;
}

.message-app .closewidget {
    padding: 10px;
}

.message-app .closewidget i {
    font-size: 20px;
    margin: 0 6px;
}

.message-app [data-region="view-overview"] {
    padding: 10px;
}

.message-app [data-region="view-overview"] a {
    background: var(--nice-color-grey);
    padding: 10px;
    border-radius: var(--nice-border-radius);
    color: var(--nice-color-white);
}

.message-app .list-group a {
    background: none !important;
    color: black !important;
}

.message-app .footer-container [data-region="view-overview"] a {
    display: block;
    width: 100%;
}

.conversationcontainer .panel-header-container .text-right {
    margin-bottom: 10px;
}

.nav-item {
    font-size: 16px;
}

.login {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
}

.login a {
    background: var(--nice-color-main);
    font-size: 16px;
    display: inline-block;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    padding: 0.5rem 1rem;
    color: var(--nice-color-white);
    line-height: 1.5;
    border-radius: var(--nice-border-radius);
    transition:
        color 0.15s ease-in-out,
        background-color 0.15s ease-in-out,
        border-color 0.15s ease-in-out,
        box-shadow 0.15s ease-in-out;
}

.login a:focus {
    color: var(--nice-color-white);
    background-color: var(--nice-color-main-focus);
    border-color: var(--nice-color-main-focus);
}

@media (max-width: 576px) {
    .upper-bar .login a {
        margin-top: 10px;
    }
}

.login-container {
    margin-bottom: 20px !important;
}

.alert {
    margin-top: 15px;
}

@media (min-width: 576px) {
    .region_main_settings_menu_proxy {
        background-color: #f5f5f5;
    }
}

.generalbox {
    background: var(--nice-color-light-grey);
    padding: 20px;
    border-radius: var(--nice-border-radius);
}

.generalbox:last-child {
    margin-top: 20px;
}

.single-courses-box {
    -webkit-box-shadow: var(--nice-box-shadow);
    -moz-box-shadow: var(--nice-box-shadow);
    box-shadow: var(--nice-box-shadow);
    border-radius: var(--nice-border-radius) !important;
}

.single-courses-box .single-courses-box-short-name {
    margin-bottom: 10px;
    gap: 5px;
}
/* ... */

